# Protobuff-changeStruct

./: CMakeLists.txt  main.c  new_structur.pb-c.c  new_structur.pb-c.h  new_structur.proto  printInfo.c  printInfo.h  protoChange.c  protoChange.h  protoChangeNew.c  protoChangeNew.h  protoChangeRemote.c  protoChangeRemote.h  protoIncil.c  protoIncil.h  protobuf-c.c  structurs.pb-c.c  structurs.pb-c.h  structurs.proto
include/: printInfo.h  protoIncil.h  protoUpdateFirst.h  protoUpdateSecond.h
proto/: structurs.pb-c.c  structurs.pb-c.h  structurs.proto  structurs_v1.pb-c.c  structurs_v1.pb-c.h  structurs_v1.proto  structurs_v2.pb-c.c  structurs_v2.pb-c.h  structurs_v2.proto
src/: main.c  printInfo.c  protoIncil.c  protoUpdateFirst.c  protoUpdateSecond.c
